final commit. TrouverActeur fixed

--- a/Lab 4 3.2 Films et acteurs/Lab 4 3.2 Films et acteurs.vcxproj
+++ b/Lab 4 3.2 Films et acteurs/Lab 4 3.2 Films et acteurs.vcxproj
@@ -133,6 +133,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Acteurs.h" />
+    <ClInclude Include="Films.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
