--- a/Lab 4 3.2 Films et acteurs/Lab 4 3.2 Films et acteurs.vcxproj.filters
+++ b/Lab 4 3.2 Films et acteurs/Lab 4 3.2 Films et acteurs.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="Acteurs.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="Films.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
